Fix spacing

--- a/static/style.css
+++ b/static/style.css
@@ -239,6 +239,7 @@ body {
     display: flex;
     gap: 16px;
     align-items: center;
+    margin-left: 32px;
 }
 
 .forecast-day-inline {
